--- a/twitch.html
+++ b/twitch.html
@@ -9,7 +9,7 @@
        <a class="buttonbox" href="main.html"><button class="button-28">Home</button></a> 
     <div id="twitch">
         <!-- Add correct website and replace placeholder parent to make twitch stream work.-->
-        <iframe src="https://player.twitch.tv/?channel=ma1tec&parent=maltec.tv" frameborder="0" allowfullscreen="true" scrolling="no"  &embedded="true"></iframe>
+        <iframe class="framesize"src="https://player.twitch.tv/?channel=ma1tec&parent=maltec.tv" frameborder="0" allowfullscreen="true" scrolling="no"  &embedded="true"></iframe>
 
     </div>
     </div>
