rename and format

--- a/index.html
+++ b/index.html
@@ -1,20 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>maltec</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <div class="boxes boxtext">
-        <a class="box"  id="aboutme" href="aboutme.html">Contact</a>
-        <a class="box"  id="twitch" href="twitch.html">Twitch</a>
-        <a class="box"  id="youtube" href="https://www.youtube.com/channel/UCRcPvaLBhre2L2socXWrBIQ">Youtube</a>
-        <a class="box"  id="discord" href="https://discord.gg/DDxQSZgxbW">Discord</a>
-        <a class="box"  id="instagram" href="https://www.instagram.com/maltelucas/">Instagram</a>
-        <a class="box"  id="twitter" href="https://twitter.com/home">Twitter</a>
+      <a class="box" id="aboutme" href="contact.html">Contact</a>
+      <a class="box" id="twitch" href="twitch.html">Twitch</a>
+      <a
+        class="box"
+        id="youtube"
+        href="https://www.youtube.com/channel/UCRcPvaLBhre2L2socXWrBIQ"
+        >Youtube</a
+      >
+      <a class="box" id="discord" href="https://discord.gg/DDxQSZgxbW"
+        >Discord</a
+      >
+      <a class="box" id="instagram" href="https://www.instagram.com/maltelucas/"
+        >Instagram</a
+      >
+      <a class="box" id="twitter" href="https://twitter.com/home">Twitter</a>
     </div>
-
-</body>
+  </body>
 </html>
