--- a/twitch.html
+++ b/twitch.html
@@ -1,17 +1,25 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <title>maltec</title>
-    <link rel="stylesheet" href="twitch.css">
-</head>
-<body>
+    <link rel="stylesheet" href="twitch.css" />
+  </head>
+  <body>
     <div class="backgroundimg">
-       <a class="buttonbox" href="main.html"><button class="button-28">Home</button></a> 
-    <div id="twitch">
+      <a class="buttonbox" href="main.html"
+        ><button class="button-28">Home</button></a
+      >
+      <div id="twitch">
         <!-- Add correct website and replace placeholder parent to make twitch stream work.-->
-        <iframe class="framesize"src="https://player.twitch.tv/?channel=ma1tec&parent=maltec.tv" frameborder="0" allowfullscreen="true" scrolling="no"  &embedded="true"></iframe>
-
+        <iframe
+          class="framesize"
+          src="https://player.twitch.tv/?channel=ma1tec&parent=maltec.tv"
+          frameborder="0"
+          allowfullscreen="true"
+          scrolling="no"
+          &embedded="true"
+        ></iframe>
+      </div>
     </div>
-    </div>
-</body>
+  </body>
 </html>
